services/media-server/manifests/04-prowlarr-1.32.0.yaml
---
# Source: prowlarr/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/service: prowlarr
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 1.14.1.4316
    helm.sh/chart: prowlarr-1.32.0
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 9696
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
---
# Source: prowlarr/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: 1.14.1.4316
    helm.sh/chart: prowlarr-1.32.0
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
      app.kubernetes.io/instance: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/instance: prowlarr
    spec:
      
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: prowlarr
          image: ghcr.io/onedr0p/prowlarr-develop:1.14.1.4316
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9696
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - /usr/bin/env
              - bash
              - -c
              - curl --fail localhost:9696/api/v1/system/status?apiKey=`IFS=\> && while read -d
                \< E C; do if [[ $E = "ApiKey" ]]; then echo $C; fi; done < /config/config.xml`
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 9696
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 9696
            timeoutSeconds: 1
