services/media-server/manifests/04-prowlarr.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: "prowlarr"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 9696
      protocol: TCP
      targetPort: 9696
  selector:
    app: prowlarr
    pod.name: main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: "prowlarr"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
      pod.name: main
  template:
    metadata:
      labels:
        app: "prowlarr"
        pod.name: "main"
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 9696
              protocol: TCP
              hostPort: null
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
              subPath: prowlarr
          # livenessProbe:
          #   httpGet:
          #     port: 9696
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 1
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     port: 9696
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 2
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # startupProbe:
          #   tcpSocket:
          #     port: 9696
          #   initialDelaySeconds: 10
          #   failureThreshold: 60
          #   successThreshold: 1
          #   timeoutSeconds: 2
          #   periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 4000m
              memory: 8Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: media-configs-pvc
