services/media-server/manifests/05-radarr-0.1.0.yaml
---
# Source: radarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
    chart: radarr-0.1.0
    release: radarr
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 7878
      protocol: TCP
      name: http
  selector:
    app: radarr
    release: radarr
---
# Source: radarr/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
    chart: radarr-0.1.0
    release: radarr
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
      release: radarr
  template:
    metadata:
      labels:
        app: radarr
        release: radarr
    spec:
      volumes:
      - name: media-ssd
        persistentVolumeClaim:
          claimName: media-pvc
      containers:
        - name: radarr
          image: "ghcr.io/onedr0p/radarr:5.3.6.8612"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: media-ssd
              subPath: configs/radarr
            - mountPath: /downloads/transmission
              name: media-ssd
              subPath: downloads/transmission
            - mountPath: /movies
              name: media-ssd
              subPath: library/movies
          resources:
            limits:
              cpu: 0.5
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
