services/media-server/manifests/05-radarr.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app: "radarr"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 7878
      protocol: TCP
      targetPort: 7878
  selector:
    app: radarr
    pod.name: main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
      pod.name: main
  template:
    metadata:
      labels:
        app: "radarr"
        pod.name: "main"
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 7878
              protocol: TCP
              hostPort: null
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
              subPath: radarr
            - name: data
              mountPath: /data
              readOnly: false
          # livenessProbe:
          #   httpGet:
          #     port: 7878
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 1
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     port: 7878
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 2
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # startupProbe:
          #   httpGet:
          #     port: 7878
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 60
          #   successThreshold: 1
          #   timeoutSeconds: 2
          #   periodSeconds: 5
          resources:
            requests:
              # cpu: 10m
              # memory: 50Mi
              cpu: 1
              memory: 2Gi
            limits:
              cpu: 4000m
              memory: 8Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: media-configs-pvc
        - name: data
          persistentVolumeClaim:
            claimName: media-data-pvc
