services/media-server/manifests/06-radarr.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
  labels:
    app: "radarr"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 7878
      protocol: TCP
      targetPort: 7878
  selector:
    app: radarr
    pod.name: main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
      pod.name: main
  template:
    metadata:
      labels:
        app: "radarr"
        pod.name: "main"
    spec:
      # securityContext:
      #   runAsUser: 911
      #   runAsGroup: 911
      #   fsGroup: 911
      #   fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:5.3.6@sha256:6c10e1133bc42649de220fa9e04e4c7bbe5ba4161a275ac1494f2bfd45417507
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 7878
              protocol: TCP
              hostPort: null
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: media
              mountPath: /data
              readOnly: false
              subPath: data
          # livenessProbe:
          #   httpGet:
          #     port: 7878
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 1
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     port: 7878
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 2
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # startupProbe:
          #   httpGet:
          #     port: 7878
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 60
          #   successThreshold: 1
          #   timeoutSeconds: 2
          #   periodSeconds: 5
          resources:
            requests:
              cpu: 2
              memory: 4Gi
            # limits:
            #   cpu: 4000m
            #   memory: 8Gi
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
