services/media-server/manifests/06-sonarr-0.1.0.yaml
---
# Source: sonarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
    chart: sonarr-0.1.0
    release: sonarr
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8989
      protocol: TCP
      name: http
  selector:
    app: sonarr
    release: sonarr
---
# Source: sonarr/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
    chart: sonarr-0.1.0
    release: sonarr
    heritage: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
      release: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        release: sonarr
    spec:
      volumes:
      - name: media-ssd
        persistentVolumeClaim:
          claimName: media-pvc
      containers:
        - name: sonarr
          image: "ghcr.io/onedr0p/sonarr:4.0.2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: media-ssd
              subPath: configs/sonarr
            - mountPath: /downloads/transmission
              name: media-ssd
              subPath: downloads/transmission
            - mountPath: /tv
              name: media-ssd
              subPath: library/tv
          resources:
            limits:
              cpu: 0.5
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
