services/media-server/manifests/07-sonarr.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app: "sonarr"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 8989
      protocol: TCP
      targetPort: 8989
  selector:
    app: sonarr
    pod.name: main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
  labels:
    app: "sonarr"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
      pod.name: main
  template:
    metadata:
      labels:
        app: "sonarr"
        pod.name: "main"
    spec:
      # securityContext:
      #   runAsUser: 911
      #   runAsGroup: 911
      #   fsGroup: 911
      #   fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.2@sha256:24b7f3f1c9ed065adc3ca7c5440944560b010a38e9bfcb7c1d8e9c965cbc8ea8
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 8989
              protocol: TCP
              hostPort: null
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: media
              mountPath: /data
              readOnly: false
              subPath: data
          # livenessProbe:
          #   httpGet:
          #     port: 8989
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 1
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     port: 8989
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 2
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # startupProbe:
          #   httpGet:
          #     port: 8989
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 60
          #   successThreshold: 1
          #   timeoutSeconds: 2
          #   periodSeconds: 5
          resources:
            requests:
              cpu: 2
              memory: 4Gi
            # limits:
            #   cpu: 4000m
            #   memory: 8Gi
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
