services/media-server/manifests/07-transmission.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9091
      protocol: TCP
      name: http
  selector:
    app: transmission

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      volumes:
      - name: media-ssd
        persistentVolumeClaim:
          claimName: media-pvc
      containers:
        - name: transmission
          image: "lscr.io/linuxserver/transmission:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
              protocol: TCP
            # - name: torrent-tcp
            #   containerPort: 51413
            #   protocol: TCP
            # - name: torrent-udp
            #   containerPort: 51413
            #   protocol: UDP
          volumeMounts:
            - mountPath: /data
              name: media-ssd
              subPath: configs/transmission-data
            - mountPath: /downloads/transmission
              name: media-ssd
              subPath: downloads/transmission
