services/media-server/manifests/08-plex-17.6.1.yaml
---
# Source: plex/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app: "plex-17.6.1"
    app.kubernetes.io/instance: "plex"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "plex"
    app.kubernetes.io/version: "1.40.1.8227"
    helm-revision: "1"
    helm.sh/chart: "plex-17.6.1"
    release: "plex"
    service.name: "main"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 32400
      protocol: TCP
      targetPort: 32400
  selector:
    pod.name: main
    app.kubernetes.io/name: plex
    app.kubernetes.io/instance: plex
---
# Source: plex/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: "plex-17.6.1"
    app.kubernetes.io/instance: "plex"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/name: "plex"
    app.kubernetes.io/version: "1.40.1.8227"
    helm-revision: "1"
    helm.sh/chart: "plex-17.6.1"
    release: "plex"
spec:  
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      pod.name: main
      app.kubernetes.io/name: plex
      app.kubernetes.io/instance: plex
  template:
    metadata:
      labels:
        app: "plex-17.6.1"
        app.kubernetes.io/instance: "plex"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/name: "plex"
        app.kubernetes.io/version: "1.40.1.8227"
        helm-revision: "1"
        helm.sh/chart: "plex-17.6.1"
        pod.lifecycle: "permanent"
        pod.name: "main"
        release: "plex"
      annotations:
        rollme: "JdNhS"
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      runtimeClassName: 
      hostNetwork: false
      hostPID: false
      hostIPC: false
      shareProcessNamespace: false
      enableServiceLinks: false
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/arch: amd64
      topologySpreadConstraints:
        - maxSkew: 1
          whenUnsatisfiable: ScheduleAnyway
          topologyKey: "truecharts.org/rack"
          labelSelector:
            matchLabels:      
              pod.name: main
              app.kubernetes.io/name: plex
              app.kubernetes.io/instance: plex
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
        - maxSkew: 1
          whenUnsatisfiable: ScheduleAnyway
          topologyKey: "kubernetes.io/hostname"
          labelSelector:
            matchLabels:      
              pod.name: main
              app.kubernetes.io/name: plex
              app.kubernetes.io/instance: plex
          nodeAffinityPolicy: Honor
          nodeTaintsPolicy: Honor
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      terminationGracePeriodSeconds: 60
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
        sysctls: []
      hostUsers: true
      containers:
        - name: plex
          image: ghcr.io/onedr0p/plex:1.40.1.8227-c0dd5a73e@sha256:4ca8db0ffa1bee5a2976a0385cc43368112e81a2485b80d0fff3b04c9d5bd1ca
          imagePullPolicy: IfNotPresent
          tty: false
          stdin: false
          ports:
            - name: main
              containerPort: 32400
              protocol: TCP
              hostPort: null
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
              subPath: prowlarr
            - name: devshm
              mountPath: /dev/shm
              readOnly: false
            - name: library
              mountPath: /library
              readOnly: false
              subPath: library
            - name: shared
              mountPath: /shared
              readOnly: false
            - name: tmp
              mountPath: /tmp
              readOnly: false
            - name: transcode
              mountPath: /transcode
              readOnly: false
            - name: varlogs
              mountPath: /var/logs
              readOnly: false
            - name: varrun
              mountPath: /var/run
              readOnly: false
          livenessProbe:
            httpGet:
              port: 32400
              path: /identity
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: 32400
              path: /identity
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            successThreshold: 2
            timeoutSeconds: 5
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 10
            failureThreshold: 60
            successThreshold: 1
            timeoutSeconds: 2
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits: 
              cpu: 4000m 
              memory: 8Gi
          securityContext:
            runAsNonRoot: true
            runAsUser: 568
            runAsGroup: 568
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              add: []
              drop:
                - ALL
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: media-configs-pvc
        - name: devshm
          emptyDir:
            medium: Memory
            sizeLimit: 8Gi
        - name: library
          persistentVolumeClaim:
            claimName: media-data-pvc
        - name: shared
          emptyDir: {}
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 8Gi
        - name: transcode
          emptyDir:
            medium: Memory
            sizeLimit: 8Gi
        - name: varlogs
          emptyDir:
            medium: Memory
            sizeLimit: 8Gi
        - name: varrun
          emptyDir:
            medium: Memory
            sizeLimit: 8Gi
