services/media-server/manifests/08-transmission.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
  labels:
    app: "transmission"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    app: transmission
    pod.name: main
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-torrent
  namespace: media
  labels:
    app: "transmission"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: torrent
      port: 51414
      protocol: TCP
      targetPort: 51414
    - name: torrentudp
      port: 51414
      protocol: UDP
      targetPort: 51414
  selector:
    app: transmission
    pod.name: main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
  labels:
    app: "transmission"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: transmission
      pod.name: main
  template:
    metadata:
      labels:
        app: "transmission"
        pod.name: "main"
    spec:
      # securityContext:
      #   runAsUser: 911
      #   runAsGroup: 911
      #   fsGroup: 911
      #   fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:4.0.5@sha256:961d37559bf12aa0820137a7575419ba450b7211a2318d90cf4a351877f738a5
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 9091
              protocol: TCP
              hostPort: null
            - name: torrent
              containerPort: 51414
              protocol: TCP
              hostPort: null
            - name: torrentudp
              containerPort: 51414
              protocol: UDP
              hostPort: null
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: download-cache
              mountPath: /downloads/incomplete
              readOnly: false
            - name: media
              mountPath: /downloads/complete
              readOnly: false
              subPath: data/downloads/complete
          # livenessProbe:
          #   tcpSocket:
          #     port: 9091
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 1
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # readinessProbe:
          #   tcpSocket:
          #     port: 9091
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 2
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # startupProbe:
          #   tcpSocket:
          #     port: 9091
          #   initialDelaySeconds: 10
          #   failureThreshold: 60
          #   successThreshold: 1
          #   timeoutSeconds: 2
          #   periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            # limits:
            #   cpu: 4000m
            #   memory: 20Gi
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: transmission-config
        - name: download-cache
          persistentVolumeClaim:
            claimName: transmission-download-cache
