services/media-server/manifests/10-plex.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app: "plex"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 32400
      protocol: TCP
      targetPort: 32400
  selector:
    app: plex
    pod.name: main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: "plex"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
      pod.name: main
  template:
    metadata:
      labels:
        app: "plex"
        pod.name: "main"
    spec:
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 32400
              protocol: TCP
              hostPort: null
          volumeMounts:
            - name: media
              mountPath: /config
              readOnly: false
              subPath: configs/plex
            - name: media
              mountPath: /library
              readOnly: false
              subPath: data/library
          # livenessProbe:
          #   httpGet:
          #     port: 32400
          #     path: /identity
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 1
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     port: 32400
          #     path: /identity
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 2
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # startupProbe:
          #   tcpSocket:
          #     port: 32400
          #   initialDelaySeconds: 10
          #   failureThreshold: 60
          #   successThreshold: 1
          #   timeoutSeconds: 2
          #   periodSeconds: 5
          resources:
            requests:
              cpu: 2
              memory: 4Gi
            limits:
              cpu: 4000m
              memory: 8Gi
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
