services/media-server/manifests/03-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "media"
  name: "media-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - sonarr.media.cluster.lab
      - radarr.media.cluster.lab
      - prowlarr.media.cluster.lab
      - transmission.media.cluster.lab
      - plex.media.cluster.lab
      secretName: media-tls-secret
  rules:
  - host: sonarr.media.cluster.lab
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "sonarr"
              port:
                number: 8989
  - host: radarr.media.cluster.lab
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "radarr"
              port:
                number: 7878
  - host: prowlarr.media.cluster.lab
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "prowlarr"
              port:
                number: 9696
  - host: transmission.media.cluster.lab
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "transmission"
              port:
                number: 9091
  - host: plex.media.cluster.lab
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "plex"
              port:
                number: 32400
